--- a/proyecto_front/package.json
+++ b/proyecto_front/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
