--- a/proyecto_front/package.json
+++ b/proyecto_front/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
